--- a/Mvc5BlogProject/Views/Blog/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogList.cshtml
@@ -1,5 +1,4 @@
-﻿<h2>Sen Bir Partial Alanisin</h2>
-<div class="site-section">
+﻿<div class="site-section">
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
