--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -14,6 +14,8 @@
 
             <div class="col-md-12 col-lg-8 main-content">
                 @Html.Action("BlogReadAll", "Blog")
+
+                @Html.Action("CommentList","Comment")
             </div>
         </div>
     </div>
