--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -15,7 +15,12 @@
             <div class="col-md-12 col-lg-8 main-content">
                 @Html.Action("BlogReadAll", "Blog")
 
-                @Html.Action("CommentList","Comment")
+                @Html.Action("CommentList", "Comment")
+            </div>
+            <div class="col-md-12 col-lg-4 sidebar">
+                @Html.Action("AuthorAbout", "Author")
+
+                @Html.Action("AuthorPopularPost","Author")
             </div>
         </div>
     </div>
