Blog Details Category List Partial Eklendi

--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -21,6 +21,8 @@
                 @Html.Action("AuthorAbout", "Author")
 
                 @Html.Action("AuthorPopularPost","Author")
+
+                @Html.Action("BlogDetailsCategoryList","Category")
             </div>
         </div>
     </div>
