--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -20,10 +20,15 @@
             <div class="col-md-12 col-lg-4 sidebar">
                 @Html.Action("AuthorAbout", "Author")
 
-                @Html.Action("AuthorPopularPost","Author")
+                @Html.Action("AuthorPopularPost", "Author")
 
-                @Html.Action("BlogDetailsCategoryList","Category")
+                @Html.Action("BlogDetailsCategoryList", "Category")
             </div>
         </div>
     </div>
 </section>
+@Html.Action("OtherFeaturedPosts", "Blog")
+
+@Html.Action("MailSubscribe", "Blog")
+
+@Html.Action("Footer", "About")
