Bloglarda Tarih Formati Ayarlandi

--- a/Mvc5BlogProject/Views/Blog/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogList.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
-                <h2>Recent Posts</h2>
+                <h2>Yakın Zamanda Eklenenler</h2>
             </div>
         </div>
         <div class="row">
@@ -18,13 +18,13 @@
 
                             <h2><a href="single.html">@x.BlogTitle</a></h2>
                             <div class="post-meta align-items-center text-left clearfix">
-                                <figure class="author-figure mb-0 mr-3 float-left"><img src="~/miniblog/miniblog/images/person_1.jpg" alt="Image" class="img-fluid"></figure>
+                                <figure class="author-figure mb-0 mr-3 float-left"><img src="@x.Author.AuthorImage" alt="Image" class="img-fluid"></figure>
                                 <span class="d-inline-block mt-1"><a href="#">@x.Author.AuthorName</a></span>
-                                <span>&nbsp;-&nbsp; @x.BlogDate</span>
+                                <span>&nbsp;-&nbsp; @(((DateTime)x.BlogDate).ToString("dd-MMM-yyyy"))</span>
                             </div>
 
                             <p>@x.BlogContent.Substring(0,x.BlogContent.Substring(0,200).LastIndexOf(" "))...</p>
-                            <p><a href="#">Read More</a></p>
+                            <p><a href="#">Devamını Oku</a></p>
                         </div>
                     </div>
                 </div>
