Resim Yukseklikleri Ayarlandi

--- a/Mvc5BlogProject/Views/Blog/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogList.cshtml
@@ -12,7 +12,7 @@
             {
                 <div class="col-lg-4 mb-4">
                     <div class="entry2">
-                        <a href="single.html"><img src="@x.BlogImage" alt="Image" class="img-fluid rounded"></a>
+                        <a href="single.html"><img src="@x.BlogImage" style="height: 250px" alt="Image" class="img-fluid rounded"></a>
                         <div class="excerpt">
                             <span class="post-category text-white bg-secondary mb-3">@x.Category.CategoryName</span>
 
