Kategorilerin Arka Plan Renklendirilmesi Yapildi

--- a/Mvc5BlogProject/Views/Blog/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Entities.Concrete.Blog>
-
+@{ string color="";}
 <div class="site-section">
     <div class="container">
         <div class="row mb-5">
@@ -10,11 +10,31 @@
         <div class="row">
             @foreach (var x in Model)
             {
+                if (x.Category.CategoryName == "Seyahat")
+                {
+                    color = "post-category text-white bg-primary mb-3";
+                }
+                if (x.Category.CategoryName == "Spor")
+                {
+                    color = "post-category text-white bg-info mb-3";
+                }
+                if (x.Category.CategoryName == "Film & Dizi")
+                {
+                    color = "post-category text-white bg-warning mb-3";
+                }
+                if (x.Category.CategoryName == "Yazılım")
+                {
+                    color = "post-category text-white bg-danger mb-3";
+                }
+                if (x.Category.CategoryName == "Müzik")
+                {
+                    color = "post-category text-white bg-secondary mb-3";
+                }
                 <div class="col-lg-4 mb-4">
                     <div class="entry2">
                         <a href="single.html"><img src="@x.BlogImage" style="height: 250px" alt="Image" class="img-fluid rounded"></a>
                         <div class="excerpt">
-                            <span class="post-category text-white bg-secondary mb-3">@x.Category.CategoryName</span>
+                            <span class="@color">@x.Category.CategoryName</span>
 
                             <h2><a href="single.html">@x.BlogTitle</a></h2>
                             <div class="post-meta align-items-center text-left clearfix">
