--- a/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
+++ b/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
@@ -2,18 +2,18 @@
     <div class="container">
         <div class="row align-items-stretch retro-layout-2">
             <div class="col-md-4">
-                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('images/img_1.jpg');">
+                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('@ViewBag.postImage1');">
 
                     <div class="text">
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.postTitle1</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate1).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
-                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('images/img_2.jpg');">
+                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('@ViewBag.postImage2');">
 
                     <div class="text">
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.postTitle2</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate2).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
@@ -31,18 +31,18 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('/miniblog/miniblog/images/img_3.jpg');">
+                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('@ViewBag.postImage3');">
 
                     <div class="text">
-                        <h2>The 20 Biggest Fintech Companies In America 2019</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.postTitle3</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate3).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
-                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('/miniblog/miniblog/images/img_4.jpg');">
+                <a href="single.html" class="h-entry v-height gradient" style="background-image: url('@ViewBag.postImage4');">
 
                     <div class="text">
-                        <h2>The 20 Biggest Fintech Companies In America 2019</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.postTitle4</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate4).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
