--- a/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
+++ b/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row align-items-stretch retro-layout-2">
             <div class="col-md-4">
-                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('@ViewBag.postImage1');">
+                <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('@ViewBag.postImage5');">
 
                     <div class="text">
-                        <h2>@ViewBag.postTitle1</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate1).ToString("dd-MMM-yyyy"))</span>
+                        <h2>@ViewBag.postTitle5</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate5).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
                 <a href="single.html" class="h-entry v-height gradient" style="background-image: url('@ViewBag.postImage2');">
@@ -18,15 +18,14 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('/miniblog/miniblog/images/img_v_1.jpg');">
+                <a href="single.html" class="h-entry img-5 h-100 gradient" style="background-image: url('@ViewBag.postImage1');">
 
                     <div class="text">
                         <div class="post-categories mb-3">
-                            <span class="post-category bg-danger">Travel</span>
-                            <span class="post-category bg-primary">Food</span>
+                            <span class="post-category bg-danger">@ViewBag.postCategory1</span>
                         </div>
-                        <h2>The AI magically removes moving objects from videos.</h2>
-                        <span class="date">July 19, 2019</span>
+                        <h2>@ViewBag.postTitle1</h2>
+                        <span class="date">@(((DateTime)@ViewBag.blogDate1).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
