Featured Post Iyilestirmlere Yapildi

--- a/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
+++ b/Mvc5BlogProject/Views/Blog/FeaturedPosts.cshtml
@@ -1,19 +1,24 @@
 ﻿<div class="site-section bg-light">
     <div class="container">
+        <div class="row mb-5">
+            <div class="col-12">
+                <h2>Öne Çıkanlar</h2>
+            </div>
+        </div>
         <div class="row align-items-stretch retro-layout-2">
             <div class="col-md-4">
                 <a href="single.html" class="h-entry mb-30 v-height gradient" style="background-image: url('@ViewBag.postImage5');">
 
                     <div class="text">
                         <h2>@ViewBag.postTitle5</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate5).ToString("dd-MMM-yyyy"))</span>
+                        <span class="date">@(((DateTime) @ViewBag.blogDate5).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
                 <a href="single.html" class="h-entry v-height gradient" style="background-image: url('@ViewBag.postImage2');">
 
                     <div class="text">
                         <h2>@ViewBag.postTitle2</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate2).ToString("dd-MMM-yyyy"))</span>
+                        <span class="date">@(((DateTime) @ViewBag.blogDate2).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
@@ -25,7 +30,7 @@
                             <span class="post-category bg-danger">@ViewBag.postCategory1</span>
                         </div>
                         <h2>@ViewBag.postTitle1</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate1).ToString("dd-MMM-yyyy"))</span>
+                        <span class="date">@(((DateTime) @ViewBag.blogDate1).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
@@ -34,14 +39,14 @@
 
                     <div class="text">
                         <h2>@ViewBag.postTitle3</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate3).ToString("dd-MMM-yyyy"))</span>
+                        <span class="date">@(((DateTime) @ViewBag.blogDate3).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
                 <a href="single.html" class="h-entry v-height gradient" style="background-image: url('@ViewBag.postImage4');">
 
                     <div class="text">
                         <h2>@ViewBag.postTitle4</h2>
-                        <span class="date">@(((DateTime)@ViewBag.blogDate4).ToString("dd-MMM-yyyy"))</span>
+                        <span class="date">@(((DateTime) @ViewBag.blogDate4).ToString("dd-MMM-yyyy"))</span>
                     </div>
                 </a>
             </div>
