--- a/Mvc5BlogProject/Views/Shared/Layout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/Layout.cshtml
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mini Blog</title>
+    <title>Blog Sesleri - Güncel İçerikler</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -36,7 +36,7 @@
             <div class="site-mobile-menu-body"></div>
         </div>
 
-        <header class="site-navbar" role="banner">
+        <header class="site-navbar" role="banner" style="position: fixed">
             <div class="container-fluid">
                 <div class="row align-items-center">
 
@@ -48,18 +48,19 @@
                     </div>
 
                     <div class="col-4 site-logo">
-                        <a href="index.html" class="text-black h2 mb-0">Mini Blog</a>
+                        <a href="index.html" class="text-black h2 mb-0">Blog Sesleri</a>
                     </div>
-
                     <div class="col-8 text-right">
                         <nav class="site-navigation" role="navigation">
                             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block mb-0">
                                 <li><a href="category.html">Ana Sayfa</a></li>
                                 <li><a href="category.html">Teknoloji</a></li>
                                 <li><a href="category.html">Yazılım</a></li>
+                                <li><a href="category.html">Spor</a></li>
                                 <li><a href="category.html">Kültür & Sanat</a></li>
                                 <li><a href="category.html">Seyahat</a></li>
                                 <li><a href="category.html">Film & Dizi</a></li>
+                                <li><a href="category.html">Müzik</a></li>
                                 <li><a href="category.html">Hakkımızda</a></li>
                                 <li><a href="category.html">İletişim</a></li>
                                 <li class="d-none d-lg-inline-block"><a href="#" class="js-search-toggle"><span class="icon-search"></span></a></li>
@@ -90,4 +91,5 @@
 
 
 </body>
+<button><a href="#top">Yukarı Çık</a></button>
 </html>
