--- a/Mvc5BlogProject/Views/Blog/Index.cshtml
+++ b/Mvc5BlogProject/Views/Blog/Index.cshtml
@@ -5,12 +5,12 @@
 }
 
 
-@Html.Action("FeaturedPosts","Blog")
+@Html.Action("FeaturedPosts", "Blog")
 
-@Html.Action("BlogList","Blog")
+@Html.Action("BlogList", "Blog")
 
-@Html.Action("OtherFeaturedPosts","Blog")
+@* @Html.Action("OtherFeaturedPosts","Blog")*@
 
-@Html.Action("MailSubscribe","Blog")
+@Html.Action("MailSubscribe", "Blog")
 
-@Html.Action("Footer","About")
+@Html.Action("Footer", "About")
