--- a/Mvc5BlogProject/Views/Shared/Layout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/Layout.cshtml
@@ -48,21 +48,21 @@
                     </div>
 
                     <div class="col-4 site-logo">
-                        <a href="index.html" class="text-black h2 mb-0">Blog Sesleri</a>
+                        <a href="index.html" class="text-black h2 mb-0" style="font-family: monospace">Blog Sesleri</a>
                     </div>
                     <div class="col-8 text-right">
                         <nav class="site-navigation" role="navigation">
                             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block mb-0">
-                                <li><a href="category.html">Ana Sayfa</a></li>
-                                <li><a href="category.html">Teknoloji</a></li>
-                                <li><a href="category.html">Yazılım</a></li>
-                                <li><a href="category.html">Spor</a></li>
-                                <li><a href="category.html">Kültür & Sanat</a></li>
-                                <li><a href="category.html">Seyahat</a></li>
-                                <li><a href="category.html">Film & Dizi</a></li>
-                                <li><a href="category.html">Müzik</a></li>
-                                <li><a href="category.html">Hakkımızda</a></li>
-                                <li><a href="category.html">İletişim</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Ana Sayfa</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Teknoloji</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Yazılım</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Spor</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Kültür & Sanat</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Seyahat</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Film & Dizi</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Müzik</a></li>
+                                <li><a href="category.html" style="font-style: oblique">Hakkımızda</a></li>
+                                <li><a href="category.html" style="font-style: oblique">İletişim</a></li>
                                 <li class="d-none d-lg-inline-block"><a href="#" class="js-search-toggle"><span class="icon-search"></span></a></li>
                             </ul>
                         </nav>
