Mail Subscribe Controller Yazildi

--- a/Mvc5BlogProject/Views/Blog/Index.cshtml
+++ b/Mvc5BlogProject/Views/Blog/Index.cshtml
@@ -10,6 +10,6 @@
 
 @* @Html.Action("OtherFeaturedPosts","Blog")*@
 
-@Html.Action("MailSubscribe", "Blog")
+@Html.Action("AddMail", "SubscribeMail")
 
 @Html.Action("Footer", "About")
