--- a/Mvc5BlogProject/Views/SubscribeMail/AddMail.cshtml
+++ b/Mvc5BlogProject/Views/SubscribeMail/AddMail.cshtml
@@ -5,8 +5,8 @@
                 <div class="subscribe-1 ">
                     <h2>Yeni bloglar için bültenimize abone olun</h2>
                     <p class="mb-5">Birbirinden farklı ve yepyeni postlarımız için mail adresinizi sitemize aşağıdaki kutucuktan kaydederek blog bültenimizi takip edebilirsiniz.</p>
-                    <form action="#" class="d-flex">
-                        <input type="text" class="form-control" placeholder="Mail adresinizi giriniz">
+                    <form method="post" class="d-flex">
+                        <input type="text" class="form-control" placeholder="Mail adresinizi giriniz" name="Mail">
                         <input type="submit" class="btn btn-primary" value="Abone Ol">
                     </form>
                 </div>
