--- a/Mvc5BlogProject/Views/About/Footer.cshtml
+++ b/Mvc5BlogProject/Views/About/Footer.cshtml
@@ -1,10 +1,14 @@
-﻿<div class="site-footer">
+﻿@model IEnumerable<Entities.Concrete.About>
+
+<div class="site-footer">
     <div class="container">
         <div class="row mb-5">
-            <div class="col-md-4">
-                <h3 class="footer-heading mb-4">Hakkımızda</h3>
-                <p>//Burasi Hakkimizda Yazisi//</p>
-            </div>
+            @foreach(var x in Model){
+                <div class="col-md-4">
+                    <h3 class="footer-heading mb-4">Hakkımızda</h3>
+                    <p>@x.AboutContent1</p>
+                </div>
+            }
             <div class="col-md-3 ml-auto">
                 <!-- <h3 class="footer-heading mb-4">Navigation</h3> -->
                 <ul class="list-unstyled float-left mr-5">
