--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -27,8 +27,8 @@
         </div>
     </div>
 </section>
-@Html.Action("OtherFeaturedPosts", "Blog")
+@*@Html.Action("OtherFeaturedPosts", "Blog")*@
 
-@Html.Action("MailSubscribe", "Blog")
+@Html.Action("AddMail", "SubscribeMail")
 
 @Html.Action("Footer", "About")
