Yazar Id Bilgisi Tasima Ve Yazarin Diger Postlarini Gosterme Islemleri Yapildi.

--- a/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogDetails.cshtml
@@ -27,7 +27,7 @@
         </div>
     </div>
 </section>
-@*@Html.Action("OtherFeaturedPosts", "Blog")*@
+@Html.Action("OtherFeaturedPosts", "Blog")
 
 @Html.Action("AddMail", "SubscribeMail")
 
