Kategori Aciklamalari Getirildi

--- a/Mvc5BlogProject/Views/About/Index.cshtml
+++ b/Mvc5BlogProject/Views/About/Index.cshtml
@@ -57,6 +57,6 @@
     </div>
 </div>
 
-@Html.Action("MailSubscribe","Blog")
+@*@Html.Action("MailSubscribe","Blog")*@
 
 @Html.Action("Footer","About")
