--- a/Mvc5BlogProject/Views/Blog/BlogByCategory.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogByCategory.cshtml
@@ -4,13 +4,14 @@
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
+
 <div class="py-5 bg-light">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <span>Category</span>
-                <h3>Cat Name</h3>
-                <p>Cat Desc</p>
+                <span>Kategori</span>
+                <h3>@ViewBag.categoryName</h3>
+                <p>@ViewBag.categoryDesc</p>
             </div>
         </div>
     </div>
