--- a/Mvc5BlogProject/Views/Shared/Layout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/Layout.cshtml
@@ -36,10 +36,9 @@
             <div class="site-mobile-menu-body"></div>
         </div>
 
-        <header class="site-navbar" role="banner" style="position: fixed">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-
+        <header class="site-navbar" role="banner">
+            <div class="container-fluid" >
+                <div class="row align-items-center" >
                     <div class="col-12 search-form-wrap js-search-form">
                         <form method="get" action="#">
                             <input type="text" id="s" class="form-control" placeholder="Search...">
@@ -48,7 +47,7 @@
                     </div>
 
                     <div class="col-4 site-logo">
-                        <a href="/Blog/Index/" class="text-black h2 mb-0" style="font-family: monospace">Blog Sesleri</a>
+                        <a href="/Blog/Index/" class="text-black h2 mb-0" style="font-family: monospace;">Blog Sesleri</a>
                     </div>
                     <div class="col-8 text-right">
                         <nav class="site-navigation" role="navigation">
@@ -58,7 +57,7 @@
                                 <li><a href="/Blog/BlogByCategory/4" style="font-style: oblique">Yazılım</a></li>
                                 <li><a href="/Blog/BlogByCategory/1" style="font-style: oblique">Spor</a></li>
                                 <li><a href="/Blog/BlogByCategory/7" style="font-style: oblique">Kültür & Sanat</a></li>
-                                <li><a href="/Blog/BlogByCategory/5" style="font-style: oblique">Seyahat</a></li>
+                                @*<li><a href="/Blog/BlogByCategory/5" style="font-style: oblique">Seyahat</a></li>*@
                                 <li><a href="/Blog/BlogByCategory/3" style="font-style: oblique">Film & Dizi</a></li>
                                 <li><a href="/Blog/BlogByCategory/6" style="font-style: oblique">Müzik</a></li>
                                 <li><a href="/About/Index/" style="font-style: oblique">Hakkımızda</a></li>
@@ -91,5 +90,4 @@
 
 
 </body>
-<button><a href="#top">Yukarı Çık</a></button>
 </html>
