Yazar Sosyal Medya Butonlari Eklendi

--- a/Mvc5BlogProject/Views/About/MeetTheTeam.cshtml
+++ b/Mvc5BlogProject/Views/About/MeetTheTeam.cshtml
@@ -16,9 +16,9 @@
                     <p>@item.AuthorAbout</p>
 
                     <p class="mt-5">
-                        <a href="#" class="p-3"><span class="icon-facebook"></span></a>
-                        <a href="#" class="p-3"><span class="icon-instagram"></span></a>
-                        <a href="#" class="p-3"><span class="icon-twitter"></span></a>
+                        @*<a href="@item.AuthorGmail" class="p-3"><span class="icon-contact_mail"></span></a>*@
+                        <a href="@item.AuthorInstagram" class="p-3"><span class="icon-instagram"></span></a>
+                        <a href="@item.AuthorTwitter" class="p-3"><span class="icon-twitter"></span></a>
                     </p>
                 </div>
             }
