İletişim Sayfası Hazırlandı

--- a/Mvc5BlogProject/Views/Shared/Layout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/Layout.cshtml
@@ -61,7 +61,7 @@
                                 <li><a href="/Blog/BlogByCategory/3" style="font-style: oblique">Film & Dizi</a></li>
                                 <li><a href="/Blog/BlogByCategory/6" style="font-style: oblique">Müzik</a></li>
                                 <li><a href="/About/Index/" style="font-style: oblique">Hakkımızda</a></li>
-                                <li><a href="/Contact/Index" style="font-style: oblique">İletişim</a></li>
+                                <li><a href="/Contact/SendMessage" style="font-style: oblique">İletişim</a></li>
                                 <li class="d-none d-lg-inline-block"><a href="#" class="js-search-toggle"><span class="icon-search"></span></a></li>
                             </ul>
                         </nav>
