--- a/Mvc5BlogProject/Views/Blog/AdminBlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/AdminBlogList.cshtml
@@ -1,8 +1,35 @@
-﻿
+﻿@model IEnumerable<Entities.Concrete.Blog>
 @{
     ViewBag.Title = "AdminBlogList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>AdminBlogList</h2>
+<h2>Blog Listesi</h2>
+<br />
+<table class="table table-bordered">
+    <tr>
+        <th>Id</th>
+        <th>Başlık</th>
+        <th>Kategori</th>
+        <th>Tarih</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Detaylar</th>
+        <th>Yorumlar</th>
+    </tr>
+    @foreach(var item in Model)
+            {
+                <tr>
+                    <td>@item.BlogId</td>
+                    <td>@item.BlogTitle</td>
+                    <td>@item.Category.CategoryName</td>
+                    <td>@item.BlogDate.ToShortDateString()</td>
+                    <td><a href="" class="btn btn-danger">Sil</a></td>
+                    <td><a href="" class="btn btn-success">Güncelle</a></td>
+                    <td><a href="" class="btn btn-warning">Detaylar</a></td>
+                    <td><a href="" class="btn btn-dark">Yorumlar</a></td>
+                </tr>
+            }
+</table>
+<a href="" class="btn btn-primary">Yeni Blog Ekle</a>
 
