Blog Silme Islemi Tamamlandi

--- a/Mvc5BlogProject/Views/Blog/AddNewBlog.cshtml
+++ b/Mvc5BlogProject/Views/Blog/AddNewBlog.cshtml
@@ -19,7 +19,7 @@
     @Html.TextBoxFor(x => x.BlogDate, new { @class = "form-control" })
     <br />
     @Html.Label("Yazar")
-    @Html.TextBoxFor(x => x.AuthorId, new { @class = "form-control" })
+    @Html.DropDownListFor(x=>x.AuthorId,(List<SelectListItem>)ViewBag.values2, new{@class="form-control"})
     <br />
     @Html.Label("İçerik")
     @Html.TextAreaFor(x => x.BlogContent, 10, 40, new { @class = "form-control" })
