Blog Admin Detaylar

--- a/Mvc5BlogProject/Views/Blog/UpdateBlog.cshtml
+++ b/Mvc5BlogProject/Views/Blog/UpdateBlog.cshtml
@@ -27,7 +27,7 @@
     @Html.Label("İçerik")
     @Html.TextAreaFor(x => x.BlogContent, 10, 40, new {@class = "form-control"})
     <br/>
-    <button class="btn btn-success">Kaydet</button>
+    <button class="btn btn-success">Güncelle</button>
 </form>
 
 
