Yorum Sayfa Tasarimi Yapildi

--- a/Mvc5BlogProject/Views/Blog/GetCommentByBlog.cshtml
+++ b/Mvc5BlogProject/Views/Blog/GetCommentByBlog.cshtml
@@ -5,18 +5,99 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Bloğa Ait Yorumlar</h2>
-<br/>
-<table class="table table-bordered">
-    <tr>
-        <th>Kullanıcı</th>
-        <th>Yorum</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.UserName</td>
-            <td>@item.CommentText</td>
-        </tr>
-    }
-</table>
+<!DOCTYPE html>
+
+<html>
+
+<body class="hold-transition sidebar-mini">
+
+    <!-- Site wrapper -->
+
+    <div class="wrapper">
+
+        <section class="content">
+
+            <div class="container-fluid">
+
+
+
+                <!-- Timelime example  -->
+
+                <div class="row">
+
+                    <div class="col-md-12">
+
+                        <!-- The time line -->
+
+                        <div class="timeline">
+
+                            <!-- timeline time label -->
+
+                            <div class="time-label">
+
+                                <span class="bg-red">10 Feb. 2014</span>
+
+                            </div>
+
+                            <!-- /.timeline-label -->
+                            <!-- timeline item -->
+
+                            <div>
+
+                                <i class="fas fa-comment bg-yellow"></i>
+
+                                <div class="timeline-item">
+
+                                    <span class="time"><i class="fas fa-clock"></i> 12:05</span>
+
+                                    <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+
+                                    <div class="timeline-body">
+
+                                        Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
+
+                                        weebly ning heekya handango imeem plugg dopplr jibjab, movity
+
+                                        jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
+
+                                        quora plaxo ideeli hulu weebly balihoo...
+
+                                    </div>
+
+                                    <div class="timeline-footer">
+
+                                        <a class="btn btn-primary btn-sm">Read more</a>
+
+                                        <a class="btn btn-danger btn-sm">Delete</a>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <!-- END timeline item -->
+
+                        </div>
+
+                    </div>
+
+                    <!-- /.col -->
+
+                </div>
+
+            </div>
+
+            <!-- /.timeline -->
+
+        </section>
+
+        <!-- /.content -->
+
+    </div>
+
+    <!-- ./wrapper -->
+
+</body>
+
+</html>
