--- a/Mvc5BlogProject/Views/Blog/GetCommentByBlog.cshtml
+++ b/Mvc5BlogProject/Views/Blog/GetCommentByBlog.cshtml
@@ -30,12 +30,12 @@
                         <!-- The time line -->
 
                         <div class="timeline">
-
+                            @foreach(var item in Model){
                             <!-- timeline time label -->
 
                             <div class="time-label">
 
-                                <span class="bg-red">10 Feb. 2014</span>
+                                <span class="bg-green">@(((DateTime)item.CommentDate).ToString("dd-MMM-yyyy"))</span>
 
                             </div>
 
@@ -48,36 +48,29 @@
 
                                 <div class="timeline-item">
 
-                                    <span class="time"><i class="fas fa-clock"></i> 12:05</span>
 
-                                    <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
+                                    <h3 class="timeline-header"><a href="#">@item.UserName</a> @item.Email</h3>
 
                                     <div class="timeline-body">
 
-                                        Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
-
-                                        weebly ning heekya handango imeem plugg dopplr jibjab, movity
-
-                                        jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
-
-                                        quora plaxo ideeli hulu weebly balihoo...
+                                       @item.CommentText
 
                                     </div>
 
                                     <div class="timeline-footer">
 
-                                        <a class="btn btn-primary btn-sm">Read more</a>
+                                        <a class="btn btn-primary btn-sm">Detaylar</a>
 
-                                        <a class="btn btn-danger btn-sm">Delete</a>
+                                        <a class="btn btn-danger btn-sm">Kaldır</a>
 
                                     </div>
 
                                 </div>
 
                             </div>
-
+                            }
                             <!-- END timeline item -->
-
+                          
                         </div>
 
                     </div>
