--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<Entities.Concrete.Author>
+
 @{
     ViewBag.Title = "AuthorList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -27,6 +28,7 @@
                     <div class="card-body pb-0">
 
                         <div class="row d-flex align-items-stretch">
+                        @foreach(var item in Model){
 
                             <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
 
@@ -34,7 +36,7 @@
 
                                     <div class="card-header text-muted border-bottom-0">
 
-                                        Digital Strategist
+                                        Yazar
 
                                     </div>
 
@@ -44,9 +46,9 @@
 
                                             <div class="col-7">
 
-                                                <h2 class="lead"><b>Nicole Pearson</b></h2>
+                                                <h2 class="lead"><b>@item.AuthorName</b></h2>
 
-                                                <p class="text-muted text-sm"><b>About: </b> Web Designer / UX / Graphic Artist / Coffee Lover </p>
+                                                <p class="text-muted text-sm"><b>Hakkında: </b> @item.AuthorAbout </p>
 
                                                 <ul class="ml-4 mb-0 fa-ul text-muted">
 
@@ -60,7 +62,7 @@
 
                                             <div class="col-5 text-center">
 
-                                                <img src="/AdminLTE-3.0.4/dist/img/user1-128x128.jpg" alt="" class="img-circle img-fluid">
+                                                <img src="@item.AuthorImage" alt="" class="img-circle img-fluid">
 
                                             </div>
 
@@ -91,12 +93,13 @@
                                 </div>
 
                             </div>
-
+                        }
                         </div>
 
                     </div>
 
                 </div>
+           
 
                 <!-- /.card -->
 
