--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -36,7 +36,7 @@
 
                                     <div class="card-header text-muted border-bottom-0">
 
-                                        Yazar
+                                        @item.AuthorTitle
 
                                     </div>
 
@@ -48,13 +48,13 @@
 
                                                 <h2 class="lead"><b>@item.AuthorName</b></h2>
 
-                                                <p class="text-muted text-sm"><b>Hakkında: </b> @item.AuthorAbout </p>
+                                                <p class="text-muted text-sm"><b>Hakkında: </b> @item.AboutShort </p>
 
                                                 <ul class="ml-4 mb-0 fa-ul text-muted">
 
-                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Address: Demo Street 123, Demo City 04312, NJ</li>
+                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Mail: @item.AuthorGmail</li>
 
-                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Phone #: + 800 - 12 12 23 52</li>
+                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Telefon #: @item.PhoneNumber</li>
 
                                                 </ul>
 
