--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -11,80 +11,58 @@
 
 <body class="hold-transition sidebar-mini">
 
-    <!-- Site wrapper -->
+<!-- Site wrapper -->
 
-    <div class="wrapper">
+<div class="wrapper">
 
-        <!-- Navbar -->
+    <!-- Navbar -->
 
-            <!-- Main content -->
+    <!-- Main content -->
 
-            <section class="content">
+    <section class="content">
 
-                <!-- Default box -->
+        <!-- Default box -->
 
-                <div class="card card-solid">
+        <div class="card card-solid">
 
-                    <div class="card-body pb-0">
+            <div class="card-body pb-0">
 
-                        <div class="row d-flex align-items-stretch">
-                        @foreach(var item in Model){
+                <div class="row d-flex align-items-stretch">
+                    @foreach(var item in Model){
 
-                            <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+                        <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
 
-                                <div class="card bg-light">
+                            <div class="card bg-light">
 
-                                    <div class="card-header text-muted border-bottom-0">
+                                <div class="card-header text-muted border-bottom-0">
 
-                                        @item.AuthorTitle
+                                    @item.AuthorTitle
 
-                                    </div>
+                                </div>
 
-                                    <div class="card-body pt-0">
+                                <div class="card-body pt-0">
 
-                                        <div class="row">
+                                    <div class="row">
 
-                                            <div class="col-7">
+                                        <div class="col-7">
 
-                                                <h2 class="lead"><b>@item.AuthorName</b></h2>
+                                            <h2 class="lead"><b>@item.AuthorName</b></h2>
 
-                                                <p class="text-muted text-sm"><b>Hakkında: </b> @item.AboutShort </p>
+                                            <p class="text-muted text-sm"><b>Hakkında: </b> @item.AboutShort </p>
 
-                                                <ul class="ml-4 mb-0 fa-ul text-muted">
+                                            <ul class="ml-4 mb-0 fa-ul text-muted">
 
-                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Mail: @item.AuthorGmail</li>
+                                                <li class="small"><span class="fa-li"><i class="fas fa-lg fa-building"></i></span> Mail: @item.AuthorGmail</li>
 
-                                                    <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Telefon #: @item.PhoneNumber</li>
+                                                <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Telefon #: @item.PhoneNumber</li>
 
-                                                </ul>
-
-                                            </div>
-
-                                            <div class="col-5 text-center">
-
-                                                <img src="@item.AuthorImage" alt="" class="img-circle img-fluid">
-
-                                            </div>
+                                            </ul>
 
                                         </div>
 
-                                    </div>
+                                        <div class="col-5 text-center">
 
-                                    <div class="card-footer">
-
-                                        <div class="text-right">
-
-                                            <a href="#" class="btn btn-sm bg-teal">
-
-                                                <i class="fas fa-comments"></i>
-
-                                            </a>
-
-                                            <a href="#" class="btn btn-sm btn-primary">
-
-                                                <i class="fas fa-user"></i> View Profile
-
-                                            </a>
+                                            <img src="@item.AuthorImage" alt="" class="img-circle img-fluid">
 
                                         </div>
 
@@ -92,26 +70,49 @@
 
                                 </div>
 
+                                <div class="card-footer">
+
+                                    <div class="text-right">
+
+                                        <a href="#" class="btn btn-sm bg-teal">
+
+                                            <i class="fas fa-comments">Yazarın Blogları</i>
+
+                                        </a>
+
+                                        <a href="#" class="btn btn-sm btn-primary">
+
+                                            <i class="fas fa-user"></i> Profili Düzenle
+
+                                        </a>
+
+                                    </div>
+
+                                </div>
+
                             </div>
-                        }
+
                         </div>
-
-                    </div>
-
+                    }
                 </div>
-           
 
-                <!-- /.card -->
-
-            </section>
-
-            <!-- /.content -->
+            </div>
 
         </div>
+           
 
-        <!-- /.control-sidebar -->
+        <!-- /.card -->
+
+    </section>
+
+    <!-- /.content -->
+
+</div>
+
+<!-- /.control-sidebar -->
 
 </body>
 
 </html>
+<a href="#" class="btn btn-success">Yeni Yazar Girişi</a>
 
