--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -114,5 +114,4 @@
 </body>
 
 </html>
-<a href="#" class="btn btn-success">Yeni Yazar Girişi</a>
-
+<a href="/Author/AddAuthor/" class="btn btn-success">Yeni Yazar Girişi</a>
