Yazar Guncelleme Sayfasi Olusturuldu

--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -80,7 +80,7 @@
 
                                         </a>
 
-                                        <a href="#" class="btn btn-sm btn-primary">
+                                        <a href="/Author/AuthorEdit/@item.AuthorId" class="btn btn-sm btn-primary">
 
                                             <i class="fas fa-user"></i> Profili Düzenle
 
