--- a/Mvc5BlogProject/Views/Comment/AdminCommentListTrue.cshtml
+++ b/Mvc5BlogProject/Views/Comment/AdminCommentListTrue.cshtml
@@ -50,7 +50,7 @@
 
                             <span class="float-right">
 
-                                <a href="#" class="link-black text-sm">
+                                <a href="/Comment/StatusChangeToFalse/@item.CommentId" class="link-black text-sm">
 
                                     <i class="far fa-comments mr-1"></i>  Yorumu Kaldır
 
