Admin Tarafinda Kategorileri Listeleme

--- a/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
@@ -76,13 +76,13 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Blog/AdminBlogList/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>Bloglar</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Author/AuthorList/" class="nav-link">
                                 <i class="nav-icon fas fa-people-arrows"></i>
                                 <p>Yazarlar</p>
                             </a>
@@ -111,7 +111,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Category/AdminCategoryList/" class="nav-link">
                                 <i class="nav-icon fas fa-box"></i>
                                 <p>Kategoriler</p>
                             </a>
