Admin Blog Listesi 2

--- a/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
@@ -82,6 +82,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href="/Blog/AdminBlogList2/" class="nav-link">
+                                <i class="nav-icon fas fa-blog"></i>
+                                <p>Blog Hızlı Bakış</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="/Author/AuthorList/" class="nav-link">
                                 <i class="nav-icon fas fa-people-arrows"></i>
                                 <p>Yazarlar</p>
