--- a/Mvc5BlogProject/Views/Blog/AdminBlogList2.cshtml
+++ b/Mvc5BlogProject/Views/Blog/AdminBlogList2.cshtml
@@ -54,19 +54,19 @@
 
                             </th>
 
-                            <th style="width: 20%">
+                            <th style="width: 25%">
 
                                 Blog Başlığı
 
                             </th>
 
-                            <th style="width: 30%">
+                            <th style="width: 8%">
 
                                 Yazar
 
                             </th>
 
-                            <th>
+                            <th style="width: 10%">
 
                                 Beğeni Oranı
 
@@ -135,17 +135,17 @@
 
                                 <td class="project-actions text-right">
 
-                                    <a class="btn btn-primary btn-sm" href="#">
+                                    <a class="btn btn-primary btn-sm" href="/Blog/BlogDetails/@item.BlogId/"/>
 
                                         <i class="fas fa-folder">
 
                                         </i>
 
-                                        Yazılar
+                                        Sitede Gör
 
-                                    </a>
+                                    
 
-                                    <a class="btn btn-info btn-sm" href="#">
+                                    <a class="btn btn-info btn-sm" href="/Blog/UpdateBlog/@item.BlogId/">
 
                                         <i class="fas fa-pencil-alt">
 
@@ -155,7 +155,7 @@
 
                                     </a>
 
-                                    <a class="btn btn-danger btn-sm" href="#">
+                                    <a class="btn btn-danger btn-sm" href="/Blog/DeleteBlog/@item.BlogId/">
 
                                         <i class="fas fa-trash">
 
