--- a/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/_AdminLayout.cshtml
@@ -123,7 +123,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/About/UpdateAbout" class="nav-link">
                                 <i class="nav-icon fas fa-address-book"></i>
                                 <p>Hakkımızda</p>
                             </a>
