Mesajlar Tarih Islemi Ayarlandi

--- a/Mvc5BlogProject/Views/Contact/SendBox.cshtml
+++ b/Mvc5BlogProject/Views/Contact/SendBox.cshtml
@@ -314,7 +314,7 @@
 
                                             <td class="mailbox-attachment"></td>
 
-                                            <td class="mailbox-date">5 mins ago</td>
+                                            <td class="mailbox-date">@(((DateTime)item.MessageDate).ToString("dd-MMM-yyyy"))</td>
 
                                         </tr>
                                     }
