--- a/Mvc5BlogProject/Views/Contact/SendBox.cshtml
+++ b/Mvc5BlogProject/Views/Contact/SendBox.cshtml
@@ -304,7 +304,7 @@
 
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
 
-                                            <td class="mailbox-name"><a href="read-mail.html">@item.Name @item.Surname</a></td>
+                                            <td class="mailbox-name"><a href="/Contact/MessageDetails/@item.ContactId">@item.Name @item.Surname</a></td>
 
                                             <td class="mailbox-subject">
 
