Mesaj Detaylari Duzenleme Yapildi

--- a/Mvc5BlogProject/Views/Contact/MessageDetails.cshtml
+++ b/Mvc5BlogProject/Views/Contact/MessageDetails.cshtml
@@ -82,14 +82,35 @@
                         <!-- /.card-header -->
                         <div class="card-body p-0">
                             <ul class="nav nav-pills flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-danger"></i> Sosyal Medya Mesajları</a>
+                                <li class="nav-item active">
+                                    <a href="/Contact/SendBox/" class="nav-link">
+                                        <i class="fas fa-inbox"></i> Gelen Kutusu
+                                        <span class="badge bg-primary float-right">2</span>
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-warning"></i> Tanıtımlar</a>
+                                    <a href="Contact/OutBox/" class="nav-link">
+                                        <i class="far fa-envelope"></i> Gönderilenler
+                                        <span class="badge bg-success float-right">0</span>
+                                    </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="far fa-circle text-primary"></i> Mail Bülteni</a>
+                                    <a href="#" class="nav-link">
+                                        <i class="far fa-file-alt"></i> Taslaklar
+                                        <span class="badge bg-primary float-right">0</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="fas fa-filter"></i> Tanıtımlar
+                                        <span class="badge bg-warning float-right">0</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="far fa-trash-alt"></i> Çöp Kutusu
+                                        <span class="badge bg-danger float-right">0</span>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
