--- a/Mvc5BlogProject/Views/Contact/SendBox.cshtml
+++ b/Mvc5BlogProject/Views/Contact/SendBox.cshtml
@@ -49,7 +49,7 @@
 
                     <div class="card-header">
 
-                        <h3 class="card-title">Klsörler</h3>
+                        <h3 class="card-title">Klasörler</h3>
 
                         <div class="card-tools">
 
@@ -64,228 +64,120 @@
                     </div>
 
                     <div class="card-body p-0">
-
                         <ul class="nav nav-pills flex-column">
-
                             <li class="nav-item active">
-
-                                <a href="#" class="nav-link">
-
+                                <a href="/Contact/SendBox/" class="nav-link">
                                     <i class="fas fa-inbox"></i> Gelen Kutusu
-
-                                    <span class="badge bg-primary float-right">12</span>
-
+                                    <span class="badge bg-primary float-right">2</span>
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
-                                <a href="#" class="nav-link">
-
+                                <a href="Contact/OutBox/" class="nav-link">
                                     <i class="far fa-envelope"></i> Gönderilenler
-
+                                    <span class="badge bg-success float-right">0</span>
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
                                     <i class="far fa-file-alt"></i> Taslaklar
-
+                                    <span class="badge bg-primary float-right">0</span>
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
-                                    <i class="fas fa-filter"></i> Çöp Kutusu
-
-                                    <span class="badge bg-warning float-right">65</span>
-
+                                    <i class="fas fa-filter"></i> Tanıtımlar
+                                    <span class="badge bg-warning float-right">0</span>
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
-                                    <i class="far fa-trash-alt"></i> Tanıtımlar
-
+                                    <i class="far fa-trash-alt"></i> Çöp Kutusu
+                                    <span class="badge bg-danger float-right">0</span>
                                 </a>
-
                             </li>
-
                         </ul>
-
                     </div>
-
                     <!-- /.card-body -->
-
                 </div>
-
                 <!-- /.card -->
-
                 <div class="card">
-
                     <div class="card-header">
-
                         <h3 class="card-title">Hazır Mesajlar</h3>
-
                         <div class="card-tools">
-
                             <button type="button" class="btn btn-tool" data-card-widget="collapse">
-
                                 <i class="fas fa-minus"></i>
-
                             </button>
-
                         </div>
-
                     </div>
-
                     <div class="card-body p-0">
-
                         <ul class="nav nav-pills flex-column">
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
                                     <i class="far fa-circle text-danger"></i>
-
                                     Sosyal Medya Mesajları
-
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
                                     <i class="far fa-circle text-warning"></i> Tanıtımlar
-
                                 </a>
-
                             </li>
-
                             <li class="nav-item">
-
                                 <a href="#" class="nav-link">
-
                                     <i class="far fa-circle text-primary"></i>
-
                                     Mail Bülteni
-
                                 </a>
-
                             </li>
-
                         </ul>
-
                     </div>
-
                     <!-- /.card-body -->
-
                 </div>
-
                 <!-- /.card -->
-
             </div>
-
-            <!-- /.col -->
-
-            <div class="col-md-9">
-
-                <div class="card card-primary card-outline">
-
-                    <div class="card-header">
-
-                        <h3 class="card-title">Gelen Mesajlar</h3>
-
-                        <div class="card-tools">
-
-                            <div class="input-group input-group-sm">
-
-                                <input type="text" class="form-control" placeholder="Mail ara">
-
-                                <div class="input-group-append">
-
-                                    <div class="btn btn-primary">
-
-                                        <i class="fas fa-search"></i>
-
-                                    </div>
-
+        <!-- /.col -->
+        <div class="col-md-9">
+            <div class="card card-primary card-outline">
+                <div class="card-header">
+                    <h3 class="card-title">Gelen Mesajlar</h3>
+                    <div class="card-tools">
+                        <div class="input-group input-group-sm">
+                            <input type="text" class="form-control" placeholder="Mail ara">
+                            <div class="input-group-append">
+                                <div class="btn btn-primary">
+                                    <i class="fas fa-search"></i>
                                 </div>
-
                             </div>
-
                         </div>
-
-                        <!-- /.card-tools -->
-
                     </div>
-
-                    <!-- /.card-header -->
-
-                    <div class="card-body p-0">
-
-                        <div class="mailbox-controls">
-
-                            <!-- Check all button -->
-
-                            <button type="button" class="btn btn-default btn-sm checkbox-toggle">
-
-                                <i class="far fa-square"></i>
-
-                            </button>
-
-                            <div class="btn-group">
-
-                                <button type="button" class="btn btn-default btn-sm"><i class="far fa-trash-alt"></i></button>
-
-                                <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
-
-                                <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
-
-                            </div>
-
-                            <!-- /.btn-group -->
-
-                            <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
-
-                            <div class="float-right">
-
-                                1-50/200
-
-                                <div class="btn-group">
-
-                                    <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
-
-                                    <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
-
-                                </div>
-
-                                <!-- /.btn-group -->
-
-                            </div>
-
-                            <!-- /.float-right -->
-
+                    <!-- /.card-tools -->
+                </div>
+                <!-- /.card-header -->
+                <div class="card-body p-0">
+                    <div class="mailbox-controls">
+                        <!-- Check all button -->
+                        <button type="button" class="btn btn-default btn-sm checkbox-toggle">
+                            <i class="far fa-square"></i>
+                        </button>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default btn-sm"><i class="far fa-trash-alt"></i></button>
+                            <button type="button" class="btn btn-default btn-sm"><i class="fas fa-reply"></i></button>
+                            <button type="button" class="btn btn-default btn-sm"><i class="fas fa-share"></i></button>
                         </div>
-
-                        <div class="table-responsive mailbox-messages">
-
-                            <table class="table table-hover table-striped">
-
-                                <tbody>
+                        <!-- /.btn-group -->
+                        <button type="button" class="btn btn-default btn-sm"><i class="fas fa-sync-alt"></i></button>
+                        <div class="float-right">
+                            1-50/200
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-left"></i></button>
+                                <button type="button" class="btn btn-default btn-sm"><i class="fas fa-chevron-right"></i></button>
+                            </div>
+                            <!-- /.btn-group -->
+                        </div>
+                        <!-- /.float-right -->
+                    </div>
+                    <div class="table-responsive mailbox-messages">
+                        <table class="table table-hover table-striped">
+                            <tbody>
                                     @foreach (var item in Model)
                                     {
                                         <tr>
