Yeni Blog Ekleme Islemi Tamamlandi

--- a/Mvc5BlogProject/Views/Blog/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/BlogList.cshtml
@@ -47,7 +47,7 @@
                             </div>
 
                             <p>@x.BlogContent.Substring(0, x.BlogContent.Substring(0, 200).LastIndexOf(" "))...</p>
-                            <p><a href="#">Devamını Oku</a></p>
+                            <p><a href="/Blog/BlogDetails/@x.BlogId">Devamını Oku</a></p>
                         </div>
                     </div>
                 </div>
