--- a/Mvc5BlogProject/Views/User/BlogList.cshtml
+++ b/Mvc5BlogProject/Views/User/BlogList.cshtml
@@ -167,7 +167,7 @@
         </div>
         <!-- /.card -->
     </section>
-
+    <a href="/User/AddNewBlog/" class="btn btn-primary">Yeni Blog Yaz</a>
 </body>
 </html>
 
