Yazar Sol Menu Linkleri Ayarlandi

--- a/Mvc5BlogProject/Views/Shared/_AuthorLayout.cshtml
+++ b/Mvc5BlogProject/Views/Shared/_AuthorLayout.cshtml
@@ -75,13 +75,13 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="/Blog/AdminBlogList/" class="nav-link">
+                            <a href="/User/BlogList/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>Bloglarım</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Blog/AdminBlogList2/" class="nav-link">
+                            <a href="/Blog/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-blog"></i>
                                 <p>Blog Hızlı Bakış</p>
                             </a>
@@ -110,13 +110,13 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/User/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-address-card"></i>
                                 <p>Profilimi Düzenle</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/User/LogOut" class="nav-link">
                                 <i class="nav-icon fas fa-door-closed"></i>
                                 <p>Çıkış Yap</p>
                             </a>
