--- a/Mvc5BlogProject/Views/Author/AuthorList.cshtml
+++ b/Mvc5BlogProject/Views/Author/AuthorList.cshtml
@@ -74,7 +74,7 @@
 
                                     <div class="text-right">
 
-                                        <a href="#" class="btn btn-sm bg-teal">
+                                        <a href="/Blog/AuthorBlogList/@item.AuthorId/" class="btn btn-sm bg-teal">
 
                                             <i class="fas fa-comments">Yazarın Blogları</i>
 
