--- a/Mvc5BlogProject/Views/Blog/AuthorBlogList.cshtml
+++ b/Mvc5BlogProject/Views/Blog/AuthorBlogList.cshtml
@@ -1,11 +1,13 @@
 ﻿@model IEnumerable<Entities.Concrete.Blog>
 
 @{
-    ViewBag.Title = "BlogList";
-    Layout = "~/Views/Shared/_AuthorLayout.cshtml";
+    ViewBag.Title = "AuthorBlogList";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 @{ string color = "";}
 @{ string caseName = "";}
+
 
 <!DOCTYPE html>
 
@@ -139,7 +141,7 @@
                                 <td class="project-actions text-right">
 
 
-                                    <a class="btn btn-info btn-sm" href="/User/UpdateBlog/@item.BlogId/">
+                                    <a class="btn btn-info btn-sm" href="/Blog/UpdateBlog/@item.BlogId/">
 
                                         <i class="fas fa-pencil-alt">
 
@@ -168,9 +170,7 @@
         </div>
         <!-- /.card -->
     </section>
-    <a href="/User/AddNewBlog/" class="btn btn-primary">Yeni Blog Yaz</a>
+    <a href="/Blog/AddNewBlog/" class="btn btn-primary">Yeni Blog Yaz</a>
 </body>
 </html>
-
-
 
