Kategori Duzenleme Islemi Gerceklestirildi

--- a/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
+++ b/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
@@ -157,7 +157,7 @@
 
                                     </a>
 
-                                    <a class="btn btn-info btn-sm" href="#">
+                                    <a class="btn btn-info btn-sm" href="/Category/CategoryEdit/@item.CategoryId">
 
                                         <i class="fas fa-pencil-alt">
 
