Kategori Status Degistirme Islemi Tamamlandi

--- a/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
+++ b/Mvc5BlogProject/Views/Category/AdminCategoryList.cshtml
@@ -167,7 +167,7 @@
 
                                     </a>
 
-                                    <a class="btn btn-danger btn-sm" href="#">
+                                    <a class="btn btn-danger btn-sm" href="/Category/CategoryDelete/@item.CategoryId">
 
                                         <i class="fas fa-trash">
 
